updated ideal data comparison

--- a/src/app/health-data-container/health-data-container.component.html
+++ b/src/app/health-data-container/health-data-container.component.html
@@ -50,4 +50,5 @@
         </div>
     </div> 
 </div>
+<p class="p-5">{{this.desc}}</p>
 <app-chart  [primaryXAxis]="primaryXAxis" [chartData]="chartData" [title]="title"></app-chart>
