--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-light">
     <div>
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/women-fitness-app/">
         <img src="assets/img/health-wellness-removebg-preview.png" width="30" height="30" class="d-inline-block align-top" alt="logo">   
         </a>
     </div>
